--- a/.github/workflows/EA7500v1.yml
+++ b/.github/workflows/EA7500v1.yml
@@ -20,7 +20,7 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/King-Of-Knights/openwrt-6.x.git
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/EA7500v1.config
