--- a/.github/workflows/EA7500v1.yml
+++ b/.github/workflows/EA7500v1.yml
@@ -21,7 +21,7 @@ on:
 
 env:
   REPO_URL: https://github.com/King-Of-Knights/openwrt-6.x.git
-  REPO_BRANCH: master
+  REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/EA7500v1.config
   DIY_P1_SH: diy-part1.sh
