--- a/.github/workflows/E8350v1_nowifi.yml
+++ b/.github/workflows/E8350v1_nowifi.yml
@@ -58,7 +58,7 @@ jobs:
       working-directory: /workdir
       run: |
         df -hT $PWD
-        git clone -b 20230609 https://github.com/coolsnowwolf/lede openwrt
+        git clone -b openwrt-24.10 https://github.com/immortalwrt/immortalwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Load custom feeds
