--- a/.github/workflows/E8350v1_nowifi.yml
+++ b/.github/workflows/E8350v1_nowifi.yml
@@ -53,7 +53,7 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-
+        sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.org/init_build_environment.sh)'
     - name: Clone source code
       working-directory: /workdir
       run: |
